--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "climadev",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next dev"
@@ -13,5 +12,6 @@
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "description": ""
 }
